fix: invisible menu blocks user click

--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,7 @@ nav {
 }
 
 nav.hidden {
-  opacity: 0;
+  display: none;
 }
 
 #toggleNav {
